# mlcg-tk

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATES.md
examples/: README.md
examples/configuration_files/: transferable_priors.yaml  trpcage.yaml  trpcage_delta_forces.yaml  trpcage_fit.yaml  trpcage_priors.yaml  trpcage_sim.yaml  trpcage_stats.yaml
examples/configuration_files/carbon_alpha_configs/: ca_trpcage.yaml  ca_trpcage_decoys_dataset.yaml  ca_trpcage_decoys_partition.yaml  ca_trpcage_delta_forces.yaml  ca_trpcage_fit.yaml  ca_trpcage_packaging.yaml  ca_trpcage_priors.yaml  ca_trpcage_sim.yaml  ca_trpcage_stats.yaml
examples/prior_analysis/: prior_check.ipynb  prior_model_example.pt
input_generator/: __init__.py  embedding_maps.py  prior_gen.py  prior_nls.py  raw_data_loader.py  raw_dataset.py  utils.py
input_generator/prior_fit/: histogram.py  restricted_bending.py  utils.py
scripts/: fit_priors.py  gen_input_data.py  gen_sim_input.py  package_training_data.py  produce_delta_forces.py
src/: __init__.py
src/input_generator/: README.md  __init__.py  embedding_maps.py  prior_gen.py  prior_nls.py  raw_data_loader.py  raw_dataset.py  utils.py
src/input_generator/prior_fit/: __init__.py  dihedral.py  fit_potentials.py  harmonic.py  histogram.py  polynomial.py  repulsion.py  utils.py
src/mlcg-tk/input_generator/: raw_data_loader.py  raw_dataset.py
src/mlcg-tk/scripts/: merge_statistics.py
src/mlcg_tk/: __init__.py
src/mlcg_tk/input_generator/: __init__.py  embedding_maps.py  prior_gen.py  prior_nls.py  raw_data_loader.py  raw_dataset.py
src/mlcg_tk/input_generator/prior_fit/: __init__.py  dihedral.py  fit_potentials.py  harmonic.py  histogram.py  polynomial.py  repulsion.py  (+2 more)
src/mlcg_tk/prior_tools/: __init__.py  utils.py
src/mlcg_tk/scripts/: add_decoys.py  fit_priors.py  gen_input_data.py  gen_sim_input.py  merge_statistics.py  package_training_data.py  produce_delta_forces.py
